fix(architecture): remediate three-service baseline review